# solar

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_utils.py
app/: db_setup.py  entities.py  mail_service.py  main.py  order_service.py  utils.py
